--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
       <header class="the-header container app__header">
         <picture class="the-header__bg-picture"
           ><source
-            srcset="/img/4_xs.c030c4bf.jpg"
+            srcset="./img/4_xs.c030c4bf.jpg"
             media="(max-width: 520px)"
             style="object-position: center top" />
           <source
-            srcset="/img/4_sm.656eeb42.jpg"
+            srcset="./img/4_sm.656eeb42.jpg"
             media="(max-width: 768px)"
             style="object-position: center top" />
           <source
-            srcset="/img/4_md.c942017a.jpg"
+            srcset="./img/4_md.c942017a.jpg"
             media="(max-width: 1024px)"
             style="object-position: center top" />
           <img
-            src="/img/4.af3a5b8a.jpg"
+            src="./img/4.af3a5b8a.jpg"
             alt="header bg"
             style="object-position: center top"
         /></picture>
         <div class="the-header__top">
           <div class="the-header__top-content">
             <div to="[object Object]" class="logo the-header__logo">
-              <img src="/img/logo.ec9d7849.svg" alt="Bygg logo" />
+              <img src="./img/logo.ec9d7849.svg" alt="Bygg logo" />
             </div>
             <!---->
             <div class="the-header__btn-wrap _desc">
@@ -315,7 +315,7 @@
       <footer class="the-footer container app__footer">
         <div class="the-footer__content container-inner">
           <div to="[object Object]" class="logo the-footer__logo">
-            <img src="/img/logo-dark.0cc0e6da.svg" alt="Bygg logo" />
+            <img src="./img/logo-dark.0cc0e6da.svg" alt="Bygg logo" />
           </div>
           <div class="the-footer__text text">
             <p>
