adding one more page

--- a/index.html
+++ b/index.html
@@ -34,91 +34,6 @@
 
                 <div class="create-project-description__row">
                   <div
-                    id="onskat-select"
-                    class="base-select create-project-description__input _shadow _large"
-                  >
-                    <span class="base-input__label">
-                      Vad behöver du hjälp med?
-                    </span>
-                    <!-- <span class="base-input__label"> Önskat startdatum </span> -->
-
-                    <div class="base-select__select">
-                      <div class="base-select__container">
-                        <div
-                          id="base-select__value__onskat"
-                          class="base-select__value"
-                        ></div>
-                        <!----><!---->
-                        <div id="onskat-button" class="base-select__arrow">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="240"
-                            height="240"
-                            viewBox="0 0 24 24"
-                            style="fill: rgba(0, 0, 0, 1)"
-                          >
-                            <path
-                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
-                            ></path>
-                          </svg>
-                        </div>
-                      </div>
-                      <div
-                        style="display: none"
-                        class="base-select__dropdown-wrap"
-                      >
-                        <div class="base-select__dropdown"></div>
-                      </div>
-                    </div>
-
-                    <!---->
-                  </div>
-                  <div
-                    id="Jag-ar-select"
-                    class="base-select create-project-description__input _shadow _large"
-                  >
-                    <span class="base-input__label"> Typ av fastighet? </span>
-                    <!-- <span class="base-input__label"> Jag är... </span> -->
-
-                    <div class="base-select__select">
-                      <div class="base-select__container">
-                        <div
-                          id="base-select__value__jar"
-                          class="base-select__value"
-                        ></div>
-                        <!----><!---->
-                        <div id="Jag-ar-button" class="base-select__arrow">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="240"
-                            height="240"
-                            viewBox="0 0 24 24"
-                            style="fill: rgba(0, 0, 0, 1)"
-                          >
-                            <path
-                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
-                            ></path>
-                          </svg>
-                        </div>
-                      </div>
-                      <div
-                        style="display: none"
-                        id="Jag-ar-select-item"
-                        class="base-select__dropdown-wrap"
-                      >
-                        <div
-                          id="Jag-ar-select-dropdown"
-                          class="base-select__dropdown"
-                        ></div>
-                      </div>
-                    </div>
-
-                    <!---->
-                  </div>
-                </div>
-
-                <div class="create-project-description__row">
-                  <div
                     id="plats-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
@@ -207,6 +122,87 @@
                   </div>
                 </div>
 
+                <div class="create-project-description__row">
+                  <!-- <div
+                    id="onskat-select"
+                    class="base-select create-project-description__input _shadow _large"
+                  >
+                    <span class="base-input__label">
+                      Vad behöver du hjälp med?
+                    </span>
+
+                    <div class="base-select__select">
+                      <div class="base-select__container">
+                        <div
+                          id="base-select__value__onskat"
+                          class="base-select__value"
+                        ></div>
+                        <div id="onskat-button" class="base-select__arrow">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="240"
+                            height="240"
+                            viewBox="0 0 24 24"
+                            style="fill: rgba(0, 0, 0, 1)"
+                          >
+                            <path
+                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
+                            ></path>
+                          </svg>
+                        </div>
+                      </div>
+                      <div
+                        style="display: none"
+                        class="base-select__dropdown-wrap"
+                      >
+                        <div class="base-select__dropdown"></div>
+                      </div>
+                    </div>
+                  </div> -->
+
+                  <div
+                    id="Jag-ar-select"
+                    class="base-select create-project-description__input _shadow _large"
+                  >
+                    <span class="base-input__label"> Typ av fastighet? </span>
+
+                    <div class="base-select__select">
+                      <div class="base-select__container">
+                        <div
+                          id="base-select__value__jar"
+                          class="base-select__value"
+                        ></div>
+                        <!----><!---->
+                        <div id="Jag-ar-button" class="base-select__arrow">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="240"
+                            height="240"
+                            viewBox="0 0 24 24"
+                            style="fill: rgba(0, 0, 0, 1)"
+                          >
+                            <path
+                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
+                            ></path>
+                          </svg>
+                        </div>
+                      </div>
+                      <div
+                        style="display: none"
+                        id="Jag-ar-select-item"
+                        class="base-select__dropdown-wrap"
+                      >
+                        <div
+                          id="Jag-ar-select-dropdown"
+                          class="base-select__dropdown"
+                        ></div>
+                      </div>
+                    </div>
+
+                    <!---->
+                  </div>
+                </div>
+
                 <label
                   class="base-input create-project-description__input _shadow"
                 >
@@ -221,7 +217,7 @@
                   ></textarea>
                 </label>
 
-                <label
+                <!-- <label
                   class="base-input create-project-description__input _shadow"
                 >
                   <span class="base-input__label"> Projektets namn </span>
@@ -252,7 +248,7 @@
                 >
                   <span class="base-input__label"> Telefon </span>
                   <input id="telefon" type="text" class="base-input__input" />
-                </label>
+                </label> -->
 
                 <h3 class="create-project-description__section-title">
                   Lägg till filer
@@ -308,15 +304,103 @@
                 <!-- <div class="create-project__footer"> -->
                 <div class="button-group-wrapper">
                   <button
-                    id="skicka-button-last"
+                    id="next-stage-button"
                     disabled="disabled"
                     class="create-project__btn btn _accent"
                   >
-                    SKICKA FÖRFRÅGAN
+                    NÄSTA STEG
                   </button>
                 </div>
                 <!-- </div> -->
               </div>
+            </div>
+          </div>
+
+          <div style="display: none" class="auth-registration-page container">
+            <div class="auth-registration-page__content container-inner">
+              <h2 class="auth-registration-page__title">Skapa konto</h2>
+              <p class="auth-registration-page__description">
+                Vänligen skapa ett konto.
+              </p>
+
+              <form class="auth-registration-page__form auth-form">
+                <div class="auth-form__row">
+                  <label class="base-input auth-form__input" name="name">
+                    <span class="base-input__label"> Namn </span>
+                    <input
+                      id="namn"
+                      type="text"
+                      name="name"
+                      class="base-input__input"
+                    />
+                  </label>
+                  <label class="base-input auth-form__input" name="surname">
+                    <span class="base-input__label"> Efternamn </span>
+                    <input
+                      id="efternamn"
+                      type="text"
+                      name="surname"
+                      class="base-input__input"
+                    />
+                  </label>
+                </div>
+                <div class="auth-form__row">
+                  <label
+                    class="base-input auth-form__input"
+                    type="email"
+                    name="email"
+                  >
+                    <span class="base-input__label"> Mejl </span>
+                    <input
+                      id="mejl"
+                      type="email"
+                      name="email"
+                      class="base-input__input"
+                    />
+                  </label>
+                  <label
+                    class="base-input auth-form__input"
+                    type="tel"
+                    name="phone"
+                  >
+                    <span class="base-input__label"> Telefon </span>
+                    <input
+                      id="telefon"
+                      type="tel"
+                      name="phone"
+                      class="base-input__input"
+                    />
+                  </label>
+                </div>
+
+                <div class="auth-form__row">
+                  <label
+                    for="agree"
+                    id="auth-form-agree"
+                    class="base-checkbox auth-form__agree"
+                  >
+                    <input
+                      type="checkbox"
+                      id="agree"
+                      name="agree"
+                      value="agree"
+                    />
+
+                    <span class="base-checkbox__content">
+                      Jag godkänner
+                      <a href="#" class="" target="_blank"> användarvillkor </a>
+                    </span>
+                  </label>
+                </div>
+
+                <button
+                  disabled="disabled"
+                  id="auth-button"
+                  class="auth-form__btn btn"
+                >
+                  SKICKA FÖRFRÅGAN
+                </button>
+              </form>
             </div>
           </div>
         </div>
