--- a/index.html
+++ b/index.html
@@ -414,7 +414,11 @@
       <footer class="the-footer container app__footer">
         <div class="the-footer__content container-inner">
           <div to="[object Object]" class="logo the-footer__logo">
-            <img src="./img/logo-dark.0cc0e6da.svg" alt="Bygg logo" />
+            <img
+              style="height: 20px"
+              src="./img/F8589813-B02C-4526-9EDA-2B8CD2E13495.png"
+              alt="Bygg logo"
+            />
           </div>
           <div class="the-footer__text text">
             <p>
