--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           <div to="[object Object]" class="logo the-footer__logo">
             <img
               style="height: 20px"
-              src="./img/F8589813-B02C-4526-9EDA-2B8CD2E13495.png"
+              src="./img/212AEB73-0D41-46CE-8CF6-619F4C6F7A66 (1).png"
               alt="Bygg logo"
             />
           </div>
