--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="logo the-header__logo">
               <img
                 style="height: 30px"
-                src="./img/06094416-4AFC-4E4B-A57E-495AAD06F067 (1).png"
+                src="./img/132ED7D5-4EBB-402A-989D-AEFCD3882C99.png"
                 alt=""
               />
             </div>
