--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
             <!---->
           </div>
         </div>
+        <div class="the-header__middle container-inner">
+          <div class="the-header__middle-content">
+            <!---->
+            <div class="logo the-header__logo centered">
+              <img
+                style="height: 30px"
+                src="./img/132ED7D5-4EBB-402A-989D-AEFCD3882C99.png"
+                alt=""
+              />
+            </div>
+            <!----><!----><!---->
+          </div>
+        </div>
+        <!---->
       </header>
 
       <main class="app__main">
